--- a/src/styles/ArrowUp.css
+++ b/src/styles/ArrowUp.css
@@ -1,15 +1,12 @@
 @import "tailwindcss";
 
 .scroll-indicator {
-  @apply z-50 flex items-center justify-center cursor-pointer;
+  @apply z-50 flex items-center justify-center left-[90vw] lg:left-[96vw] cursor-pointer;
   @apply rounded-full border-2;
 
   position: fixed;
-  margin-left: auto;
-  flex: 1;
-  min-width: fit-content;
   bottom: 2rem;
-  margin-right: 2rem;
+  margin-left: -1.5rem;
   width: 3rem;
   height: 3rem;
   border-color: rgba(255, 255, 255, 0.4);
@@ -35,7 +32,7 @@
 }
 
 /* Hide scroll indicator on mobile devices (less than 768px) */
-@media (max-width: 767px) {
+@media (max-width: 769px) {
   .scroll-indicator {
     display: none;
   }
